fix: set z-index:0 on .automatic-completion-conditions

--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -894,6 +894,7 @@ h3.sectionname,
 
     .automatic-completion-conditions {
         display: contents;
+        z-index: 0;
     }
 
     [role="listitem"].badge {
